--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <header id="home">
     <div class="precisaser">
-      <img class="logo" src="assets/logo-precisaser.svg">
+      <img class="logo-ps" src="assets/logo-precisaser.svg">
     </div>
     <div class="vainaweb">
       <h2 class="instituto">Instituto de tecnologias sociais e digitais</h2>
@@ -59,12 +59,10 @@
     </section>
 
     <section id="parceiros">
-<!--       <h2 class="projetos">Projetos parceiros</h2> -->
+      <!-- <h2 class="projetos">Projetos parceiros</h2> -->
 
       <div>
-        <div>
-          <img src="assets/pontinhodeluz.png">
-        </div>
+          <img class="logo" src="assets/pontinhodeluz.png">
         <h3>Pontinho de Luz</h3>
         <p> 
             Uma rede de solidariedade e amor ao próximo através da prática da gentileza.
@@ -73,7 +71,7 @@
       </div>
 
       <div>
-        <img src="assets/reciclacao.png">
+        <img class="logo" src="assets/reciclacao.png">
         <h3>Reciclação</h3>
         <p>
           Um grupo de coleta seletiva de resíduos, redução de riscos ambientais em barragens e
@@ -82,7 +80,7 @@
       </div>
       
       <div>
-        <img src="assets/circuitomais.png">
+        <img class="logo" src="assets/circuitomais.png">
         <h3>Circuito Mais</h3>
         <p>
           Uma competição de artes marciais com Mais desempenho esportivo, Mais integração local, Mais retorno social.
@@ -90,15 +88,15 @@
       </div>
 
       <div>
-        <img src="assets/proa.png">
+        <img class="logo" src="assets/proa.png">
         <h3>PROA</h3>
         <p>
             Prevenção realizada com organização e amor. Coletivo de prevenção das DST, combate a vetores e desenvolvimento humano.
         </p>
       </div>
 
-<!--       <div>
-        <img src="assets/alimentandovidas.png">
+      <div>
+        <img class="logo" src="assets/alimentandovidas.png">
         <h3>Alimentando Vidas</h3>
         <p>
           Uma rede de solidariedade e amor ao próximo através da prática da gentileza.
@@ -107,7 +105,7 @@
       </div>
 
       <div>
-        <img src="assets/atravesdamusica.png">
+        <img class="logo" src="assets/atravesdamusica.png">
         <h3>Através da Música</h3>
         <p>
           Uma turma cheia de melodia, ritmo eharmonia decida a mudar realidades de pessoas e comunidades através da música.
@@ -115,7 +113,7 @@
       </div>
 
       <div>
-        <img src="assets/turmadasopa.png">
+        <img class="logo" src="assets/turmadasopa.png">
         <h3>Turma da Sopa</h3>
         <p>
           Uma associação que utiliza o alimento como uma forma de reintegrar o indivíduo em situação de rua ou em vulnerabilidade social à sociedade.
@@ -123,7 +121,7 @@
       </div>
 
       <div>
-        <img src="assets/educap.png">
+        <img class="logo" src="assets/educap.png">
         <h3>Educap</h3>
         <p>
           Já tem um projeto e quer participar da nossa rede? Fique de olho aqui e em nosso Facebook, em breve teremos mais novidades.
@@ -131,7 +129,7 @@
       </div>
 
       <div>
-        <img src="assets/reciclacao.png">
+        <img class="logo" src="assets/reciclacao.png">
         <h3>VUM, vamos unir o mundo</h3>
         <p>
           Uma rede de solidariedade e amor ao próximo através da prática da gentileza. Seja um pontinho de luz!
@@ -139,7 +137,7 @@
       </div>
 
       <div>
-        <img src="assets/reciclacao.png">
+        <img class="logo" src="assets/reciclacao.png">
         <h3>OSC Legal</h3>
         <p>
           Uma turma cheia de melodia, ritmo e harmonia decida a mudar realidades de pessoas e comunidades através da música.
@@ -147,7 +145,7 @@
       </div>
 
       <div>
-        <img src="assets/reciclacao.png">
+        <img class="logo" src="assets/reciclacao.png">
         <h3>Há Esperança</h3>
         <p>
           Uma turma cheia de melodia, ritmo e harmonia decida a mudar realidades de pessoas e comunidades através da música.
@@ -155,12 +153,12 @@
       </div>
 
       <div>
-        <img src="assets/reciclacao.png">
+        <img class="logo" src="assets/reciclacao.png">
         <h3>Centro Social Agir</h3>
         <p>
           Uma turma cheia de melodia, ritmo e harmonia decida a mudar realidades de pessoas e comunidades através da música.
         </p>
-      </div> -->
+      </div>
     </section>
 
     <section id="map">
@@ -174,6 +172,6 @@
     <p class="precisa">
       O Precisa Ser é uma plataforma de conscientização, diálogo e ação coletiva que coloca a tecnologia à favor das reais necessidades sociais. Foi criada e é genrenciada pela 1STi, uma consultoria em tecnologias emergentes. Nossa missão é aproximar a tecnologia das reais necessidades sociais.
     </p>
-  </footer>
 </body>
+
 </html>
