--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     </section>
 
     <section id="parceiros">
-      <!-- <h2 class="projetos">Projetos parceiros</h2> -->
+      <h2 class="title-projetos">Projetos parceiros</h2>
 
-      <div>
-          <img class="logo" src="assets/pontinhodeluz.png">
+      <div class="item-parceiros">
+          <img src="assets/pontinhodeluz.png">
         <h3>Pontinho de Luz</h3>
         <p> 
             Uma rede de solidariedade e amor ao próximo através da prática da gentileza.
@@ -71,8 +71,8 @@
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/reciclacao.png">
+      <div class="item-parceiros">
+        <img src="assets/reciclacao.png">
         <h3>Reciclação</h3>
         <p>
           Um grupo de coleta seletiva de resíduos, redução de riscos ambientais em barragens e
@@ -80,24 +80,24 @@
         </p>
       </div>
       
-      <div>
-        <img class="logo" src="assets/circuitomais.png">
+      <div class="item-parceiros">
+        <img src="assets/circuitomais.png">
         <h3>Circuito Mais</h3>
         <p>
           Uma competição de artes marciais com Mais desempenho esportivo, Mais integração local, Mais retorno social.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/proa.png">
+      <div class="item-parceiros">
+        <img src="assets/proa.png">
         <h3>PROA</h3>
         <p>
             Prevenção realizada com organização e amor. Coletivo de prevenção das DST, combate a vetores e desenvolvimento humano.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/alimentandovidas.png">
+      <div class="item-parceiros">
+        <img src="assets/alimentandovidas.png">
         <h3>Alimentando Vidas</h3>
         <p>
           Uma rede de solidariedade e amor ao próximo através da prática da gentileza.
@@ -105,56 +105,56 @@
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/atravesdamusica.png">
+      <div class="item-parceiros">
+        <img src="assets/atravesdamusica.png">
         <h3>Através da Música</h3>
         <p>
           Uma turma cheia de melodia, ritmo eharmonia decida a mudar realidades de pessoas e comunidades através da música.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/turmadasopa.png">
+      <div class="item-parceiros">
+        <img src="assets/turmadasopa.png">
         <h3>Turma da Sopa</h3>
         <p>
           Uma associação que utiliza o alimento como uma forma de reintegrar o indivíduo em situação de rua ou em vulnerabilidade social à sociedade.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/educap.png">
+      <div class="item-parceiros">
+        <img src="assets/educap.png">
         <h3>Educap</h3>
         <p>
           Já tem um projeto e quer participar da nossa rede? Fique de olho aqui e em nosso Facebook, em breve teremos mais novidades.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/reciclacao.png">
+      <div class="item-parceiros">
+        <img src="assets/reciclacao.png">
         <h3>VUM, vamos unir o mundo</h3>
         <p>
           Uma rede de solidariedade e amor ao próximo através da prática da gentileza. Seja um pontinho de luz!
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/reciclacao.png">
+      <div class="item-parceiros">
+        <img src="assets/reciclacao.png">
         <h3>OSC Legal</h3>
         <p>
           Uma turma cheia de melodia, ritmo e harmonia decida a mudar realidades de pessoas e comunidades através da música.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/reciclacao.png">
+      <div class="item-parceiros">
+        <img src="assets/reciclacao.png">
         <h3>Há Esperança</h3>
         <p>
           Uma turma cheia de melodia, ritmo e harmonia decida a mudar realidades de pessoas e comunidades através da música.
         </p>
       </div>
 
-      <div>
-        <img class="logo" src="assets/reciclacao.png">
+      <div class="item-parceiros">
+        <img src="assets/reciclacao.png">
         <h3>Centro Social Agir</h3>
         <p>
           Uma turma cheia de melodia, ritmo e harmonia decida a mudar realidades de pessoas e comunidades através da música.
@@ -162,8 +162,12 @@
       </div>
     </section>
 
+
+    
+
     <section id="map">
-      <img src="assets/map.png">
+<!--       <img class="aba" src="assets/round.svg"> -->
+      <img class="maps" src="assets/map.png">
     </section>
   </main>
 
