--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
   <header id="home">
-    <div class="precisaser">
+    <div class="div-precisaser">
       <img class="logo-ps" src="assets/logo-precisaser.svg">
     </div>
     <div class="vainaweb">
-      <h2 class="instituto">Instituto de tecnologias sociais e digitais</h2>
+      <h2 class="tittle-instituto">Instituto de tecnologias sociais e digitais</h2>
       <p class="historia">
         O Vai Na Web é uma jornada de aprendizado em desenvolvimento de páginas web
         responsivas e habilidades socioemocionais para jovens de 16 a 29 anos dentro de
