--- a/index.html
+++ b/index.html
@@ -172,11 +172,25 @@
   </main>
 
   <footer>
-    <img class="box" src="assets/box-precisaser.svg">
-    <img class="logo-precisaser" src="assets/logo-precisaser.svg">
-    <p class="precisa">
-      O Precisa Ser é uma plataforma de conscientização, diálogo e ação coletiva que coloca a tecnologia à favor das reais necessidades sociais. Foi criada e é genrenciada pela 1STi, uma consultoria em tecnologias emergentes. Nossa missão é aproximar a tecnologia das reais necessidades sociais.
-    </p>
+    <div class="p-precisaser">
+      <img class="box" src="assets/box-precisaser.svg">
+      <img class="logo-precisaser" src="assets/logo-precisaser.svg">
+      <p class="precisa">
+        O Precisa Ser é uma plataforma de conscientização, diálogo e ação coletiva que coloca a tecnologia à favor das reais necessidades sociais. Foi criada e é genrenciada pela 1STi, uma consultoria em tecnologias emergentes. Nossa missão é aproximar a tecnologia das reais necessidades sociais.
+      </p>
+    </div>
+
+    <div class="plugin-facebook">
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="210" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
+      </iframe>
+    </div>
+
+    <div class="plugin-responsivo">
+      <!-- <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="340" height="180" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
+      </iframe> -->
+    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    </div>
+
 </body>
 
 </html>
