--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
     </div>
     <div class="vainaweb">
       <h2 class="tittle-instituto">Instituto de tecnologias sociais e digitais</h2>
-      <p class="historia">
-        O Vai Na Web é uma jornada de aprendizado em desenvolvimento de páginas web
-        responsivas e habilidades socioemocionais para jovens de 16 a 29 anos dentro de
-        organizações de base comunitária. Um programa intensivo de capacitação
-        profissional em que jovens em início de carreira aprendem desenvolvendo em
-        projetos reais. Com autonomia para pensar.
+      <p class="sobre-instituto">
+        O Instituto Precisa Ser, trabalha para a promoção da inclusão de comunidades populares nos processos de desenvolvimento e aprimoramento de soluções de suas demandas nestes territórios, contribuindo, da implementação de programas sociais e digitais, para o seu desenvolvimento humano, para a garantia de direitos o atingimento da equidade e da justiça social.
       </p>
     </div>
   </header>
@@ -188,7 +184,7 @@
     <div class="plugin-responsivo">
       <!-- <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="340" height="180" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
       </iframe> -->
-    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="280" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="300" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     </div>
 
 </body>
