--- a/index.html
+++ b/index.html
@@ -184,9 +184,18 @@
             <img class="box" src="assets/box-precisaser.svg">
             <img class="logo-precisaser" src="assets/logo-precisaser.svg">
           </div>
+
+          <div class="contact-responsivo">
+          <h2 class="tittle-contact">Contato</h2>
+          <ul>
+            <li>21 00000 0000</li>
+            <li>ola@precisaser.org.br</li>
+            <li>Rio de Janeiro, RJ</li>
+          </ul>
+        </div>
        
         <div>
-            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="310" height="90" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fprecisaser%2F%3Ffref%3Dts&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="300" height="90" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
         </div>
     </div> 
 
