--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="vainaweb">
       <h2 class="tittle-instituto">Instituto de tecnologias sociais e digitais</h2>
       <p class="sobre-instituto">
+        A tecnologia move o mundo. Existimos para colocá-la a disposição das reais necessidades da sociedade, trazendo a força e a independência que as tecnologias social e digital são capazes de desenvolver no ser humano. Habilidades humanas que, com tecnologia de ponta que deixam de ser limitada a poucos e passa a ganhar visibilidade no contexto social das populações em situação de vulnerabilidades e risco social.
+      </p>
+      <p class="sobre-instituto">
         O Instituto Precisa Ser, trabalha para a promoção da inclusão de comunidades populares nos processos de desenvolvimento e aprimoramento de soluções de suas demandas nestes territórios, contribuindo, da implementação de programas sociais e digitais, para o seu desenvolvimento humano, para a garantia de direitos o atingimento da equidade e da justiça social.
       </p>
     </div>
